# SerialServer

./: .gitignore  CMakeLists.txt  Doxyfile  Makefile  Makefile.arm  Makefile.armv7l  Makefile.linux  Makefile.x86_64  README.md  backup.sh  build.sh  client.cpp  clientTest.c  creatorTest.cpp  daemon.c  globals.cpp  go.sh  install-opkg-arm  rediSerial.c  rediSerial.h  serialServer.c  serialServer.cpp  serialServer.sh  serialStdio.c  strsave.cpp  strsave.h  tst.cpp
opkg-arm/CONTROL/: control
